--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
         <input type="submit" id="click" value="Guess"><br><br>
     </div>
     <div id="guess-results"></div>
-<!-- 
-    <script src="script.js" type="text/javascript"></script>
-    <script src="script2.js" type="text/javascript"></script> -->
-    <!-- <script src="script3.js" type="text/javascript"></script> -->
-    <script src="linkedList.js" type="text/javascript"></script>
+
+    <script src="LinkedList1.js" type="text/javascript"></script>
+    <script src="linkedList2.js" type="text/javascript"></script>
 </body>
 
 </html>
